<resources>
    <string name="app_name">Yummigram</string>
    <string name="hello_world">Hello world!</string>
    <string name="image_content_description">.</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="new_here">New here?</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="push_notification">Push Notification</string>
    <string name="photo_effects">Photo Effects</string>
    <string name="share">Share</string>
    <string name="add_comment">Add comment</string>
    <string name="also_share_on_facebook">also share on Facebook?</string>
    <string name="share_photo_only">   Share Photo (Only)   </string>
    <string name="add_recipe_name">Add recipe name</string>
    <string name="add_ingrediants">Add Ingrediants</string>
    <string name="add_directions">Add directions</string>
    <string name="share_recipe">Share Recipe</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="action_settings">Settings</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="sample_name">Lesley Woodcare</string>
    <string name="sample_time">12m</string>
    <string name="recipe_request">RECIPE REQUEST</string>
    <string name="recipe_requested">RECIPE REQUESTED</string>
    <string name="sample_self_comment">This is a superb green brokoli recipe I would like to share with you, friends</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="favorite">Favorite</string>
    <string name="everyone">Everyone</string>
    <string name="following">Following</string>
    <string name="photo_profile">1 photos</string>
    <string name="following_profile">2 Following</string>
    <string name="follower_profile">1 Followers</string>
    <string name="facebook_app_id">727545570605680</string>
    <string name="recipe">RECIPE</string>
    <string name="title_recipe">Recipe</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="description">DESCRIPTION</string>
    <string name="title_post">Post</string>
    <string name="post">Post</string>
    <string name="send_message">SEND MESSAGE</string>
    <string name="follow">Follow</string>
</resources>
