<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/head" >

        <Button
            android:id="@+id/btnBackLogin"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/bg_btn_back"
            android:layout_alignParentTop="true"
            android:layout_marginTop="3dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp"
            android:layout_centerHorizontal="true"
            android:layout_alignBaseline="@+id/btnBackLogin" />

    </RelativeLayout>

    <EditText
        android:id="@+id/etxtUsername"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#ff343434"
        android:textColorHint="#ffacacac"
        android:textCursorDrawable="@null"
        android:textSize="18sp"
        android:paddingLeft="10dp">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etxtPassword"
        android:layout_width="280dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#ffacacac"
        android:textCursorDrawable="@null"
        android:textColor="#ff343434"
        android:textSize="18sp"
        android:paddingLeft="10dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/new_here"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="18sp"
        android:textColor="#ffacacac" />

    <Button
        android:id="@+id/btnCreateAccountLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:background="#0000"
        android:text="@string/create_an_account"
        android:textSize="18sp"
        android:textColor="#ff343434" />

    <Button
        android:id="@+id/btnLoginLogin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/follow_button_active"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

</LinearLayout>
