<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg">

    <com.zhs1.Yummigram.utils.SoftKeyboardHandledLinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lyMainViewEditRecipe">
        <FrameLayout android:id="@+id/my_content"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1">
            <!-- Your content here -->
            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/scrollView">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/head"
                        android:id="@+id/relativeLayout">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="Edit Recipe"
                            android:id="@+id/textView"
                            android:layout_gravity="center"
                            android:layout_centerHorizontal="true"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:layout_alignBaseline="@+id/btnBackEditRecipe" />

                        <Button
                            android:layout_width="44dp"
                            android:layout_height="44dp"
                            android:id="@+id/btnBackEditRecipe"
                            android:layout_alignParentTop="false"
                            android:layout_alignParentLeft="false"
                            android:layout_alignParentStart="true"
                            android:background="@drawable/bg_btn_back" />
                    </RelativeLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_marginTop="10dp"
                        android:id="@+id/lyComment">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="match_parent"
                            android:id="@+id/imgvEditRecipe"
                            android:background="@drawable/photo_sample"
                            android:scaleType="fitXY"
                            android:layout_marginLeft="10dp"
                            android:contentDescription="@string/image_content_description" />

                    </LinearLayout>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:id="@+id/etxtAddRecipeNameEditRecipe"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/input"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="10dp"
                        android:hint="@string/add_recipe_name"
                        android:textColor="#ff343434"
                        android:textColorHint="#ffacacac"
                        android:textSize="18sp"
                        android:textCursorDrawable="@null"
                        android:gravity="left|top"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:id="@+id/etxtAddIngrediantEditRecipe"
                        android:background="@drawable/input"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:hint="@string/add_ingrediants"
                        android:textColorHint="#ffacacac"
                        android:textColor="#ff343434"
                        android:textSize="18sp"
                        android:textCursorDrawable="@null"
                        android:gravity="left|top"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:id="@+id/etxtAddDirectionEditRecipe"
                        android:background="@drawable/input"
                        android:hint="@string/add_directions"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textColor="#ff343434"
                        android:textColorHint="#ffacacac"
                        android:textSize="18sp"
                        android:textCursorDrawable="@null"
                        android:gravity="left|top"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="Save"
                        android:id="@+id/btnSaveEditRecipe"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/follow_button_active"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_marginTop="10dp" />
                </LinearLayout>
            </ScrollView>
        </FrameLayout>
        <RelativeLayout android:id="@+id/my_toolbar_edit_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff313131">
            <!-- Your toolbar items here -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prev"
                android:id="@+id/btnPrevEditRecipe"
                android:background="#ff313131"
                android:textSize="18sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:id="@+id/btnNextEditRecipe"
                android:textSize="18sp"
                android:background="#ff313131"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/btnPrevEditRecipe"
                android:layout_toEndOf="@+id/btnPrevEditRecipe" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:id="@+id/btnDoneEditRecipe"
                android:layout_gravity="right"
                android:textSize="18sp"
                android:background="#ff313131"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </com.zhs1.Yummigram.utils.SoftKeyboardHandledLinearLayout>

</LinearLayout>
